@@ -1,3 +1,11 @@
+* Thu Jun 28 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
+- DISA STIG changes:
+  - Added gdm::settings
+  - Added gdm::banner
+  - Added gdm::simp_banner
+  - Added gdm::dconf_hash
+  - Added gnome::dconf_hash
+
 * Mon Jun 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 2.3.4-0
 - DISA STIG changes:
   - Added auditd::config::audit_profiles::simp::audit_crontab_cmd
